<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ominscorp.promedios.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:onClick="go_to_settings"
                android:scaleType="fitXY"
                android:src="@drawable/round_settings_24">

            </ImageView>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.79"
        android:background="@color/colorPrimary"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texto_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="120sp" />

        <LinearLayout
            android:id="@+id/layout_nombres"
            android:layout_below="@id/texto_nota"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/texto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_weight="1.9"
                android:text="@string/nota"/>

            <TextView
                android:id="@+id/texto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1.1"
                android:textSize="30sp"
                android:text="@string/porcentaje"/>


        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ingreso_notas"
            android:layout_below="@id/layout_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_above="@+id/adView1"
            >

            <LinearLayout
                android:id="@+id/scroll_notas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/botones"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4235180355584066/2368299073">

        </com.google.android.gms.ads.AdView>


        <LinearLayout
            android:id="@+id/botones"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="-"
                    android:onClick="menos_notas"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="+"
                    android:onClick="mas_notas"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:text="@string/limpiar"
                    android:onClick="limpiar"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:layout_height="match_parent"
                    android:text="@string/calcular"
                    android:onClick="calcular"/>

        </LinearLayout>




    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:id="@+id/adbottom"
        android:background="@color/colorPrimary">

        <FrameLayout
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>


</LinearLayout>